--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "20.4.10",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "@types/react-image-magnify": "^2.7.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "clsx": "^2.0.0",
@@ -37,6 +38,7 @@
     "react-dom": "18.2.0",
     "react-editor-js": "^2.1.0",
     "react-hot-toast": "^2.4.1",
+    "react-image-magnify": "^2.7.4",
     "react-intersection-observer": "^9.5.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
