--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "@types/react-image-magnify": "^2.7.1",
+    "@uidotdev/usehooks": "^2.2.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "clsx": "^2.0.0",
@@ -40,6 +41,7 @@
     "react-hot-toast": "^2.4.1",
     "react-image-magnify": "^2.7.4",
     "react-intersection-observer": "^9.5.2",
+    "swiper": "^10.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
