--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@babel/preset-typescript": "^7.22.5",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
+    "husky": "^8.0.3",
     "install": "^0.13.0",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
